lustre/target/update_trans.c
@@ -781,7 +781,8 @@ int top_trans_start(const struct lu_env *env, struct dt_device *master_dev,
 	list_for_each_entry(st, &tmt->tmt_sub_thandle_list, st_sub_list) {
 		if (st->st_sub_th == NULL)
 			continue;
-		st->st_sub_th->th_sync = th->th_sync;
+		if (th->th_sync)
+			st->st_sub_th->th_sync = th->th_sync;
 		st->st_sub_th->th_local = th->th_local;
 		st->st_sub_th->th_tags = th->th_tags;
 		rc = dt_trans_start(env, st->st_sub_th->th_dev,
@@ -970,7 +971,8 @@ stop_master_trans:
 	 * master transno in the update logs to other MDT. */
 	if (master_st != NULL && master_st->st_sub_th != NULL) {
 		master_st->st_sub_th->th_local = th->th_local;
-		master_st->st_sub_th->th_sync = th->th_sync;
+		if (th->th_sync)
+			master_st->st_sub_th->th_sync = th->th_sync;
 		master_st->st_sub_th->th_tags = th->th_tags;
 		master_st->st_sub_th->th_result = th->th_result;
 		rc = dt_trans_stop(env, master_st->st_dt, master_st->st_sub_th);
@@ -1024,7 +1026,8 @@ stop_other_trans:
 		if (st == master_st || st->st_sub_th == NULL)
 			continue;
 
-		st->st_sub_th->th_sync = th->th_sync;
+		if (th->th_sync)
+			st->st_sub_th->th_sync = th->th_sync;
 		st->st_sub_th->th_local = th->th_local;
 		st->st_sub_th->th_tags = th->th_tags;
 		st->st_sub_th->th_result = th->th_result;
